--- a/SatHachBangLaiXe/SatHachBangLaiXe.csproj
+++ b/SatHachBangLaiXe/SatHachBangLaiXe.csproj
@@ -82,17 +82,17 @@
     <Compile Include="FrmThi.Designer.cs">
       <DependentUpon>FrmThi.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmXemDapAn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmXemDapAn.Designer.cs">
+      <DependentUpon>FrmXemDapAn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MENU.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MENU.Designer.cs">
-      <DependentUpon>MENU.cs</DependentUpon>
     </Compile>
     <Compile Include="NavigateForm.cs">
       <SubType>Form</SubType>
@@ -103,17 +103,22 @@
     <Compile Include="FrmPhieuTraLoi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SATHACHBANGLAI1DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SATHACHBANGLAI1DataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmThi.resx">
       <DependentUpon>FrmThi.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmXemDapAn.resx">
+      <DependentUpon>FrmXemDapAn.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MENU.resx">
-      <DependentUpon>MENU.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NavigateForm.resx">
       <DependentUpon>NavigateForm.cs</DependentUpon>
@@ -142,6 +147,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="SATHACHBANGLAI1DataSet.xsc">
+      <DependentUpon>SATHACHBANGLAI1DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SATHACHBANGLAI1DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet.xss">
+      <DependentUpon>SATHACHBANGLAI1DataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
