--- a/SatHachBangLaiXe/SatHachBangLaiXe.csproj
+++ b/SatHachBangLaiXe/SatHachBangLaiXe.csproj
@@ -108,6 +108,26 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SATHACHBANGLAI1DataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="SATHACHBANGLAI1DataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SATHACHBANGLAI1DataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="SATHACHBANGLAI1DataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SATHACHBANGLAI1DataSet2.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="SATHACHBANGLAI1DataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SATHACHBANGLAI1DataSet3.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="SATHACHBANGLAI1DataSet4.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SATHACHBANGLAI1DataSet4.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -157,6 +177,50 @@
     </None>
     <None Include="SATHACHBANGLAI1DataSet.xss">
       <DependentUpon>SATHACHBANGLAI1DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet1.xsc">
+      <DependentUpon>SATHACHBANGLAI1DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SATHACHBANGLAI1DataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet1.xss">
+      <DependentUpon>SATHACHBANGLAI1DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet2.xsc">
+      <DependentUpon>SATHACHBANGLAI1DataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SATHACHBANGLAI1DataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet2.xss">
+      <DependentUpon>SATHACHBANGLAI1DataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet3.xsc">
+      <DependentUpon>SATHACHBANGLAI1DataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SATHACHBANGLAI1DataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet3.xss">
+      <DependentUpon>SATHACHBANGLAI1DataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet4.xsc">
+      <DependentUpon>SATHACHBANGLAI1DataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet4.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SATHACHBANGLAI1DataSet4.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="SATHACHBANGLAI1DataSet4.xss">
+      <DependentUpon>SATHACHBANGLAI1DataSet4.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
