--- a/SatHachBangLaiXe/SatHachBangLaiXe.csproj
+++ b/SatHachBangLaiXe/SatHachBangLaiXe.csproj
@@ -103,6 +103,9 @@
     <Compile Include="FrmPhieuTraLoi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionGroupBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="SATHACHBANGLAI1DataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
