--- a/SatHachBangLaiXe/App.config
+++ b/SatHachBangLaiXe/App.config
@@ -9,10 +9,10 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
 <connectionStrings>
-    <add name="cn" connectionString="Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHBANGLAI1;user=sa;pwd=123456"
+    <add name="cn" connectionString="Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHLAIXE;user=sa;pwd=123456"
         providerName="System.Data.SqlClient" />
     <add name="SatHachBangLaiXe.Properties.Settings.SATHACHBANGLAI1ConnectionString"
-        connectionString="Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHBANGLAI1;Integrated Security=True"
+        connectionString="Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHLAIXE;Integrated Security=True"
         providerName="System.Data.SqlClient" />
 </connectionStrings>
     <userSettings>
