--- a/SatHachBangLaiXe/SatHachBangLaiXe.csproj
+++ b/SatHachBangLaiXe/SatHachBangLaiXe.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmNhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmNhanVien.Designer.cs">
+      <DependentUpon>FrmNhanVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmThi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +140,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmNhanVien.resx">
+      <DependentUpon>FrmNhanVien.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmThi.resx">
       <DependentUpon>FrmThi.cs</DependentUpon>
     </EmbeddedResource>
@@ -158,6 +167,7 @@
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Candidate.datasource" />
+    <None Include="Properties\DataSources\DTO.NhanVien.datasource" />
     <None Include="Properties\DataSources\Form1.datasource" />
     <None Include="Properties\DataSources\MENU.datasource" />
     <None Include="Properties\DataSources\Program.datasource" />
