--- a/SatHachBangLaiXe/App.config
+++ b/SatHachBangLaiXe/App.config
@@ -26,6 +26,9 @@
             <setting name="RememberMe" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="mahocvien" serializeAs="String">
+                <value />
+            </setting>
         </SatHachBangLaiXe.Properties.Settings>
     </userSettings>
 </configuration>
