--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -40,9 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntityState.cs" />
+    <Compile Include="IHocVienRepository.cs" />
+    <Compile Include="INhanVienRepository.cs" />
     <Compile Include="NhanVien.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HocVien.cs" />
+    <Compile Include="UserThiSinh.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
