--- a/SatHachBangLaiXe/Properties/Settings.settings
+++ b/SatHachBangLaiXe/Properties/Settings.settings
@@ -14,10 +14,13 @@
     <Setting Name="SATHACHBANGLAI1ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHBANGLAI1;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHLAIXE;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHBANGLAI1;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHLAIXE;Integrated Security=True</Value>
+    </Setting>
+    <Setting Name="mahocvien" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
