--- a/SatHachBangLaiXe/SatHachBangLaiXe.csproj
+++ b/SatHachBangLaiXe/SatHachBangLaiXe.csproj
@@ -54,9 +54,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\LAIXE\Icons\metroframework-modern-ui-master\metroframework-modern-ui-master\MetroFramework.Fonts.dll</HintPath>
     </Reference>
+    <Reference Include="Net.Code.ADONet, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Net.Code.ADONet.3.0.47\lib\net45\Net.Code.ADONet.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,12 +74,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeThi.cs" />
-    <Compile Include="EntityState.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FrmMainMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmMainMenu.Designer.cs">
+      <DependentUpon>FrmMainMenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmThiSinh.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmThiSinh.Designer.cs">
+      <DependentUpon>FrmThiSinh.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmNhanVien.cs">
       <SubType>Form</SubType>
@@ -100,6 +110,12 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="LogInThiSinh.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LogInThiSinh.Designer.cs">
+      <DependentUpon>LogInThiSinh.cs</DependentUpon>
+    </Compile>
     <Compile Include="NavigateForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,6 +123,12 @@
       <DependentUpon>NavigateForm.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmPhieuTraLoi.cs" />
+    <Compile Include="NavigateFormQuanLy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NavigateFormQuanLy.Designer.cs">
+      <DependentUpon>NavigateFormQuanLy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionGroupBox.cs">
@@ -137,8 +159,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SATHACHBANGLAI1DataSet4.xsd</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FrmMainMenu.resx">
+      <DependentUpon>FrmMainMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmThiSinh.resx">
+      <DependentUpon>FrmThiSinh.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmNhanVien.resx">
       <DependentUpon>FrmNhanVien.cs</DependentUpon>
@@ -152,8 +177,14 @@
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="LogInThiSinh.resx">
+      <DependentUpon>LogInThiSinh.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="NavigateForm.resx">
       <DependentUpon>NavigateForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NavigateFormQuanLy.resx">
+      <DependentUpon>NavigateFormQuanLy.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -167,6 +198,7 @@
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Candidate.datasource" />
+    <None Include="Properties\DataSources\DTO.HocVien.datasource" />
     <None Include="Properties\DataSources\DTO.NhanVien.datasource" />
     <None Include="Properties\DataSources\Form1.datasource" />
     <None Include="Properties\DataSources\MENU.datasource" />
