--- a/SatHachBangLaiXe/packages.config
+++ b/SatHachBangLaiXe/packages.config
@@ -6,4 +6,5 @@
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net452" />
   <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net452" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net452" />
+  <package id="Net.Code.ADONet" version="3.0.47" targetFramework="net452" />
 </packages>
