--- a/SatHachBangLaiXe/App.config
+++ b/SatHachBangLaiXe/App.config
@@ -29,6 +29,9 @@
             <setting name="mahocvien" serializeAs="String">
                 <value />
             </setting>
+            <setting name="madethi" serializeAs="String">
+                <value />
+            </setting>
         </SatHachBangLaiXe.Properties.Settings>
     </userSettings>
 </configuration>
