--- a/SatHachBangLaiXe/Properties/Settings.settings
+++ b/SatHachBangLaiXe/Properties/Settings.settings
@@ -22,5 +22,8 @@
     <Setting Name="mahocvien" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="madethi" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
