--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HocVienService.cs" />
+    <Compile Include="KyThiService.cs" />
     <Compile Include="NhanVienService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
