--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="Helper.cs" />
     <Compile Include="HocVienRepository.cs" />
+    <Compile Include="KyThiRepository.cs" />
     <Compile Include="NhanVienRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
