--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Compile Include="EntityState.cs" />
     <Compile Include="IHocVienRepository.cs" />
+    <Compile Include="IKyThiRepository.cs" />
     <Compile Include="INhanVienRepository.cs" />
+    <Compile Include="TTKyThi.cs" />
     <Compile Include="NhanVien.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HocVien.cs" />
