--- a/SatHachBangLaiXe/App.config
+++ b/SatHachBangLaiXe/App.config
@@ -1,38 +1,66 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="SatHachBangLaiXe.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
-<connectionStrings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SatHachBangLaiXe.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <connectionStrings>
     <add name="cn" connectionString="Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHLAIXE;user=sa;pwd=123456"
-        providerName="System.Data.SqlClient" />
+      providerName="System.Data.SqlClient" />
     <add name="SatHachBangLaiXe.Properties.Settings.SATHACHBANGLAI1ConnectionString"
-        connectionString="Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHLAIXE;Integrated Security=True"
-        providerName="System.Data.SqlClient" />
-</connectionStrings>
-    <userSettings>
-        <SatHachBangLaiXe.Properties.Settings>
-            <setting name="TaiKhoan" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="MatKhau" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="RememberMe" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="mahocvien" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="madethi" serializeAs="String">
-                <value />
-            </setting>
-        </SatHachBangLaiXe.Properties.Settings>
-    </userSettings>
+      connectionString="Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHLAIXE;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="localhost_SATHACHLAIXE_Connection" connectionString="XpoProvider=MSSqlServer;data source=PHUCCOI\PHUCCOI;integrated security=SSPI;initial catalog=SATHACHLAIXE" />
+    <add name="SATHACHLAIXEEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PHUCCOI\PHUCCOI;initial catalog=SATHACHLAIXE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <userSettings>
+    <SatHachBangLaiXe.Properties.Settings>
+      <setting name="TaiKhoan" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="MatKhau" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="RememberMe" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="mahocvien" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="madethi" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="KDiaChi" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="KMaHV" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="KSoCMND" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="KKyThi" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="KHoHV" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="KTenHV" serializeAs="String">
+        <value />
+      </setting>
+    </SatHachBangLaiXe.Properties.Settings>
+  </userSettings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
-
