--- a/SatHachBangLaiXe/App.config
+++ b/SatHachBangLaiXe/App.config
@@ -11,14 +11,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="cn" connectionString="Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHLAIXE;user=sa;pwd=123456"
-      providerName="System.Data.SqlClient" />
-    <add name="SatHachBangLaiXe.Properties.Settings.SATHACHBANGLAI1ConnectionString"
-      connectionString="Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHLAIXE;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="cn" connectionString="Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHLAIXE;user=sa;pwd=123456" providerName="System.Data.SqlClient" />
+    <add name="SatHachBangLaiXe.Properties.Settings.SATHACHBANGLAI1ConnectionString" connectionString="Data Source=PHUCCOI\PHUCCOI;Initial Catalog=SATHACHLAIXE;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="localhost_SATHACHLAIXE_Connection" connectionString="XpoProvider=MSSqlServer;data source=PHUCCOI\PHUCCOI;integrated security=SSPI;initial catalog=SATHACHLAIXE" />
-    <add name="SATHACHLAIXEEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PHUCCOI\PHUCCOI;initial catalog=SATHACHLAIXE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
+    <add name="SATHACHLAIXEEntities" connectionString="metadata=res://*/csdl|res://*/ssdl|res://*/msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PHUCCOI\PHUCCOI;initial catalog=SATHACHLAIXE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SATHACHLAIXEEntities1" connectionString="metadata=res://*/ModelReport.csdl|res://*/ModelReport.ssdl|res://*/ModelReport.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PHUCCOI\PHUCCOI;initial catalog=SATHACHLAIXE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <userSettings>
     <SatHachBangLaiXe.Properties.Settings>
