--- a/SatHachBangLaiXe/App.config
+++ b/SatHachBangLaiXe/App.config
@@ -16,6 +16,8 @@
     <add name="localhost_SATHACHLAIXE_Connection" connectionString="XpoProvider=MSSqlServer;data source=PHUCCOI\PHUCCOI;integrated security=SSPI;initial catalog=SATHACHLAIXE" />
     <add name="SATHACHLAIXEEntities" connectionString="metadata=res://*/csdl|res://*/ssdl|res://*/msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PHUCCOI\PHUCCOI;initial catalog=SATHACHLAIXE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="SATHACHLAIXEEntities1" connectionString="metadata=res://*/ModelReport.csdl|res://*/ModelReport.ssdl|res://*/ModelReport.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PHUCCOI\PHUCCOI;initial catalog=SATHACHLAIXE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SATHACHLAIXEEntities2" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PHUCCOI\PHUCCOI;initial catalog=SATHACHLAIXE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SATHACHLAIXEEntities3" connectionString="metadata=res://*/Model5.csdl|res://*/Model5.ssdl|res://*/Model5.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PHUCCOI\PHUCCOI;initial catalog=SATHACHLAIXE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <userSettings>
     <SatHachBangLaiXe.Properties.Settings>
